Added support for requestBodies. Fixes #20

--- a/src/test/resources/examples/javaSerializableModels/api.yaml
+++ b/src/test/resources/examples/javaSerializableModels/api.yaml
@@ -176,8 +176,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: "#/components/schemas/FirstModel"
-
+            type: string
 
   schemas:
     QueryResult:
