Fixes Polymorphism with simple $ref schemas causes broken models #203

--- a/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
+++ b/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
@@ -23,6 +23,9 @@ components:
         some_enum:
           $ref: '#/components/schemas/EnumDiscriminator'
 
+    ConcreteImplOneRef:
+      $ref: '#/components/schemas/ConcreteImplOne'
+
     ConcreteImplOne:
       allOf:
         - $ref: '#/components/schemas/polymorphicEnumDiscriminator'
@@ -38,7 +41,7 @@ components:
           properties:
             some_prop:
               type: string
-              
+
     concrete_impl_three:
       allOf:
         - $ref: '#/components/schemas/polymorphicEnumDiscriminator'
