--- a/src/test/resources/examples/polymorphicModels/api.yaml
+++ b/src/test/resources/examples/polymorphicModels/api.yaml
@@ -1,6 +1,12 @@
 openapi: 3.0.0
 components:
   schemas:
+    PolymorphicTypeOneRef:
+      $ref: "#/components/schemas/PolymorphicTypeOne"
+    PolymorphicTypeOneAnotherRef:
+      $ref: "#/components/schemas/PolymorphicTypeOne"
+    PolymorphicTypeTwoRef:
+      $ref: "#/components/schemas/polymorphic_type_two"
     PolymorphicSuperType:
       type: object
       discriminator:
@@ -32,7 +38,7 @@ components:
             child_two_age:
               type: integer
               format: int32
-              
+
     AnotherObject:
       type: object
       properties:
