--- a/src/test/resources/examples/javaSerializableModels/api.yaml
+++ b/src/test/resources/examples/javaSerializableModels/api.yaml
@@ -176,7 +176,8 @@ components:
       content:
         application/json:
           schema:
-            type: string
+            $ref: "#/components/schemas/FirstModel"
+
 
   schemas:
     QueryResult:
