--- a/src/test/resources/examples/okHttpClient/api.yaml
+++ b/src/test/resources/examples/okHttpClient/api.yaml
@@ -199,7 +199,7 @@ components:
       content:
         application/json:
           schema:
-            type: string
+            $ref: "#/components/schemas/FirstModel"
 
 
   schemas:
