Fixed name clashes for requestBodies with multiple content.

--- a/src/test/resources/examples/requestsSchema/api.yaml
+++ b/src/test/resources/examples/requestsSchema/api.yaml
@@ -20,3 +20,18 @@ components:
                 type: string
               age:
                 type: integer
+    MultiContent:
+      description: Request body
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              a:
+                type: string
+        application/json2:
+          schema:
+            type: object
+            properties:
+              x:
+                type: integer
