Add support for requestBodies section. Fixes #20. (#205)
* Added support for requestBodies. Fixes #20

* code review

* Reverted changes to tests made unnecessary by other PR

* Fixed name clashes for requestBodies with multiple content.

---------

Co-authored-by: Andreas Tollkötter <andreas.tollkoetter@flipapp.de>

--- a/src/test/resources/examples/responsesSchema/api.yaml
+++ b/src/test/resources/examples/responsesSchema/api.yaml
@@ -1,4 +1,12 @@
 openapi: 3.0.0
+paths:
+  /foo:
+    post:
+      responses:
+        200:
+          $ref: '#/components/responses/SuccessResponse'
+        500:
+          $ref: '#/components/responses/ErrorResponse'
 components:
   responses:
     ErrorResponse:
@@ -15,7 +23,7 @@ components:
                 type: string
               code:
                 type: integer
-    SucccessResponse:
+    SuccessResponse:
       description: "Response on success"
       content:
         application/json:
