Change from suffix from conditional integer, to always using the significant part of the declared content type

--- a/src/test/resources/examples/requestsSchema/api.yaml
+++ b/src/test/resources/examples/requestsSchema/api.yaml
@@ -29,7 +29,7 @@ components:
             properties:
               a:
                 type: string
-        application/json2:
+        application/my-custom+json:
           schema:
             type: object
             properties:
