Similar fix for response section, use content type suffix

--- a/src/test/resources/examples/responsesSchema/api.yaml
+++ b/src/test/resources/examples/responsesSchema/api.yaml
@@ -12,7 +12,7 @@ components:
     ErrorResponse:
       description: "Response on error"
       content:
-        application/json:
+        application/problem+json:
           schema:
             type: object
             required:
