relax validation code

--- a/src/test/resources/examples/issue223/api.yaml
+++ b/src/test/resources/examples/issue223/api.yaml
@@ -77,6 +77,9 @@ components:
       description: Mammal Creation Parent Object.
       discriminator:
         propertyName: mammalType
+        mapping:
+          DOG: '#/components/schemas/CreateDog'
+          COW: '#/components/schemas/CreateCow'
     CreateMammalRequest:
       required:
         - createMammal
