Removed dedicated test case by adding issue-223 examples into another test case

--- a/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
+++ b/src/test/resources/examples/anyOfOneOfAllOf/api.yaml
@@ -21,6 +21,9 @@ components:
           type: integer
 
     ComplexParent:
+      required:
+        - top_level_prop
+      type: object
       allOf:
         - $ref: '#/components/schemas/ContainsNestedOneOf'
         - $ref: '#/components/schemas/ContainsNestedAnyOf'
