Quote enum item names when necessary (#241)
Add backticks to the enum item name in case it doesn't
start with a letter or an underscore and hence is not
a valid Kotlin identifier.

--- a/src/test/resources/examples/defaultValues/api.yaml
+++ b/src/test/resources/examples/defaultValues/api.yaml
@@ -18,6 +18,12 @@ components:
             - tall
             - short
           default: tall
+        enum_quoted_default:
+          type: string
+          enum:
+            - 1x
+            - 2x
+          default: 2x
         boolean_default:
           type: boolean
           default: true
