--- a/src/test/resources/examples/externalReferences/external-models.yaml
+++ b/src/test/resources/examples/externalReferences/external-models.yaml
@@ -1,5 +1,5 @@
 openapi: 3.0.0
-paths: {}
+paths: { }
 info:
   title: ""
   version: ""
@@ -9,10 +9,10 @@ components:
       type: object
       properties:
         another:
-          $ref: "#/components/schemas/ExternalObjectTwo"        
+          $ref: "#/components/schemas/ExternalObjectTwo"
         one_of:
           $ref: "#/components/schemas/ExternalOneOf"
-          
+
     ExternalObjectTwo:
       type: object
       required:
@@ -27,7 +27,7 @@ components:
         minProperties: 1
         additionalProperties:
           $ref: '#/components/schemas/ExternalObjectFour'
-   
+
     ExternalObjectThree:
       type: object
       required:
@@ -41,20 +41,20 @@ components:
             - two
             - three
         description:
-          type: string   
-          
+          type: string
+
     ExternalObjectFour:
       type: object
       properties:
         blah:
-          type: string     
-          
+          type: string
+
     IgnoredExternalObjectFive:
       type: object
       properties:
         blah:
           type: string
-    
+
     ExternalOneOf:
       oneOf:
         - $ref: '#/components/schemas/OneOfOne'
@@ -67,7 +67,7 @@ components:
       properties:
         discriminator:
           type: string
-          
+
     OneOfOne:
       allOf:
         - $ref: '#/components/schemas/ParentOneOf'
@@ -82,4 +82,41 @@ components:
         - type: object
           properties:
             oneOfTwo:
+              type: string
+
+    Language:
+      type: string
+      enum:
+        - ENGLISH
+        - DUTCH
+        - GERMAN
+    Content:
+      type: object
+      properties:
+        contentType:
+          type: string
+          enum:
+            - HTML
+            - MD
+      discriminator:
+        propertyName:
+          contentType
+        mapping:
+          HTML: '#/components/schemas/ContentHTML'
+          MD: '#/components/schemas/ContentMD'
+    ContentHTML:
+      allOf:
+        - $ref: '#/components/schemas/Content'
+        - type: object
+          properties:
+            header:
+              type: string
+            body:
+              type: string
+    ContentMD:
+      allOf:
+        - $ref: '#/components/schemas/Content'
+        - type: object
+          properties:
+            richText:
               type: string
