--- a/src/test/resources/examples/externalReferences/api.yaml
+++ b/src/test/resources/examples/externalReferences/api.yaml
@@ -7,7 +7,7 @@ paths:
     get:
       operationId: helloWorld
       parameters:
-        - name: language
+        - name: parameter
           in: path
           required: true
           schema:
@@ -18,7 +18,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: './external-models.yaml#/components/schemas/ContainingExternalReference'
+                $ref: '#/components/schemas/ContainingExternalReference'
 components:
   schemas:
     ContainingExternalReference:
