Add support for nullable keyword. If a required property has its schema flagged as nullable, it is no longer flagged as a non null.

--- a/src/test/resources/examples/optionalVsRequired/api.yaml
+++ b/src/test/resources/examples/optionalVsRequired/api.yaml
@@ -5,9 +5,13 @@ components:
       type: object
       required:
       - name
+      - requiredNullable
       properties:
         name:
           type: string
         gender:
           type: string
           format: uuid
+        requiredNullable:
+          type: string
+          nullable: true
