Fix inline schema definitions inherited from a parent. When an inline schema is inherited, the child should reference the parent definition, and not build ain incompatible child version

--- a/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
+++ b/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
@@ -17,6 +17,18 @@ components:
       properties:
         some_enum:
           $ref: '#/components/schemas/ChildDiscriminator'
+        inline_obj:
+          type: object
+          properties:
+            str:
+              type: string
+        inline_array:
+          type: array
+          items:
+            type: object
+            properties:
+              str:
+                type: string
 
     ChildDiscriminator:
       type: string
