Fix inline schema definitions inherited from a parent. (#269)
* Fix inline schema definitions inherited from a parent.
When an inline schema is inherited, the child should reference the parent definition, and not build ain incompatible child version

* Add test for enum

--- a/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
+++ b/src/test/resources/examples/enumPolymorphicDiscriminator/api.yaml
@@ -17,6 +17,24 @@ components:
       properties:
         some_enum:
           $ref: '#/components/schemas/ChildDiscriminator'
+        inline_obj:
+          type: object
+          properties:
+            str:
+              type: string
+        inline_array:
+          type: array
+          items:
+            type: object
+            properties:
+              str:
+                type: string
+        inline_enum:
+          type: string
+          enum:
+            - one
+            - two
+            - three
 
     ChildDiscriminator:
       type: string
