Add extra property to test spec for discriminatedOneOf

--- a/src/test/resources/examples/discriminatedOneOf/api.yaml
+++ b/src/test/resources/examples/discriminatedOneOf/api.yaml
@@ -35,6 +35,12 @@ components:
       type: object
       required:
         - status
+        - mode
       properties:
         status:
           $ref: '#/components/schemas/Status'
+        mode:
+          type: string
+          enum:
+            - mode1
+            - mode2
