Add test for model containing binary property

--- a/src/test/resources/examples/binary/api.yaml
+++ b/src/test/resources/examples/binary/api.yaml
@@ -22,3 +22,11 @@ paths:
               schema:
                 type: string
                 format: binary
+
+components:
+  schemas:
+    BinaryData:
+      properties:
+        binaryValue:
+          type: string
+          format: binary
