Add an extension to allow the JsonInclude annotation to be added to a class. This will allow the global Jackson include settings to be overridden on a class by class basis.

--- a/src/test/resources/examples/customExtensions/api.yaml
+++ b/src/test/resources/examples/customExtensions/api.yaml
@@ -5,6 +5,25 @@ info:
   version: ""
 components:
   schemas:
+    ParentWithIncludeNonNullExtension:
+      x-jackson-include-non-null: true
+      type: object
+      required:
+        - simpleRequired
+      properties:
+        simpleNullable:
+          nullable: true
+          type: string
+        simpleRequired:
+          type: string
+        childWithout:
+          x-jackson-include-non-null: false
+          type: object
+          properties:
+            direct:
+              type: string
+
+
     NoMergePatchInline:
       type: object
       properties:
