test: Updated `NullableArrayItems` to be nullable

--- a/src/test/resources/examples/nullableArrayItems/api.yaml
+++ b/src/test/resources/examples/nullableArrayItems/api.yaml
@@ -8,6 +8,7 @@ components:
       properties:
         anArray:
           type: array
+          nullable: true
           items:
             type: string
             nullable: true
