Fix Jens issue. Need to be lenient with inline object definitions like we are with top-level, and not require explicit `type: object` non-empty properties should be enough to assume object intent

--- a/src/test/resources/examples/arrays/api.yaml
+++ b/src/test/resources/examples/arrays/api.yaml
@@ -10,6 +10,12 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ArrayOfSomething"
+        absent-object-type-in-array:
+          type: array
+          items:
+            properties:
+              some-array-prop:
+                type: string
 
     ArrayOfSomething:
       type: array
