--- a/end2end-tests/models-jackson/openapi/api.yaml
+++ b/end2end-tests/models-jackson/openapi/api.yaml
@@ -5,7 +5,41 @@ info:
   version:
 components:
   schemas:
-
+    # Polymorphism
+    PolymorphicTypeOneRef:
+      $ref: "#/components/schemas/PolymorphicTypeOne"
+    PolymorphicTypeOneAnotherRef:
+      $ref: "#/components/schemas/PolymorphicTypeOne"
+    PolymorphicSuperType:
+      type: object
+      discriminator:
+        propertyName: generation
+      required:
+        - generation
+        - first_name
+        - last_name
+      properties:
+        generation:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+    PolymorphicTypeOne:
+      allOf:
+        - $ref: "#/components/schemas/PolymorphicSuperType"
+        - type: object
+          properties:
+            child_one_name:
+              type: string
+    PolymorphicTypeTwo:
+      allOf:
+        - $ref: "#/components/schemas/PolymorphicSuperType"
+        - type: object
+          properties:
+            child_two_age:
+              type: integer
+              format: int32
     # Maps
     MapHolder:
       type: object
