Fix nullable array parameterized type. Also combining the two latest test cases around nullable true into existing test cases to reduce example set

--- a/src/test/resources/examples/arrays/api.yaml
+++ b/src/test/resources/examples/arrays/api.yaml
@@ -16,6 +16,12 @@ components:
             properties:
               some-array-prop:
                 type: string
+        a-nullable-array:
+          type: array
+          nullable: true
+          items:
+            type: string
+            nullable: true
 
     ArrayOfSomething:
       type: array
