Fix default array issue. We can only support basic defaults for field types, and should ignore any more complicated defaults for now. Closes #312

--- a/src/test/resources/examples/arrays/api.yaml
+++ b/src/test/resources/examples/arrays/api.yaml
@@ -16,6 +16,11 @@ components:
             properties:
               some-array-prop:
                 type: string
+        array_with_empty_default:
+          type: array
+          default: []
+          items:
+            type: string
         a-nullable-array:
           type: array
           nullable: true
