--- a/src/test/resources/examples/defaultValues/api.yaml
+++ b/src/test/resources/examples/defaultValues/api.yaml
@@ -46,3 +46,19 @@ components:
           type: string
           format: byte
           default: U3dhZ2dlciByb2Nrcw==
+        ignored_array_default:
+          type: array
+          default: []
+          items:
+            type: string
+        ignored_object_default:
+          type: object
+          properties:
+            name:
+              type: string
+            age:
+              type: integer
+          default:
+            name: "John Doe"
+            age: 30
+
