Allow having multiple authentication alternatives in Ktor controllers
`authenticate()` accepts a vararg and by default allows the API access if at least one
option is satisfied.

--- a/src/test/resources/examples/authentication/api.yaml
+++ b/src/test/resources/examples/authentication/api.yaml
@@ -9,6 +9,7 @@ paths:
       operationId: testPath
       security:
         - BasicAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - in: query
           name: testString
@@ -78,5 +79,8 @@ components:
     BasicAuth:
       type: http
       scheme: basic
+    BearerAuth:
+      type: http
+      scheme: bearer
 security:
   - basicAuth: [ ]
