Omit discriminator property for Kotlin serialization
Generating the discriminator property causes a name conflict with Kotlin Serialization's class discriminator.

Example: `Sealed class 'subclass' cannot be serialized as base class 'com.example.models.Superclass' because it has property name that conflicts with JSON class discriminator 'type'.`

--- a/end2end-tests/models-kotlinx/openapi/api.yaml
+++ b/end2end-tests/models-kotlinx/openapi/api.yaml
@@ -71,9 +71,12 @@ components:
     LandlinePhone:
       type: object
       required:
+        - type
         - number
         - area_code
       properties:
+        type:
+          type: string
         number:
           type: string
         area_code:
@@ -81,8 +84,11 @@ components:
     MobilePhone:
       type: object
       required:
+        - type
         - number
       properties:
+        type:
+          type: string
         number:
           type: string
     Error:
