--- a/src/test/resources/examples/arrays/api.yaml
+++ b/src/test/resources/examples/arrays/api.yaml
@@ -1,6 +1,24 @@
 openapi: 3.0.0
 info:
 paths:
+  /items:
+    get:
+      summary: Get items with a status filter
+      description: Retrieve a list of items filtered by their status.
+      parameters:
+        - name: status
+          in: query
+          required: false
+          description: Filter items by status.
+          schema:
+            $ref: '#/components/schemas/ArrayOfSomething'
+      responses:
+        "200":
+          description: A list of items.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ArrayContainingComplexInlined'
 components:
   schemas:
     ContainsArrayOfArrays:
@@ -77,3 +95,11 @@ components:
         grams:
           type: integer
           example: 100
+
+    ArrayContainingComplexInlined:
+      type: array
+      items:
+        type: object
+        properties:
+          prop_one:
+            type: string
